ACLOCAL_AMFLAGS = -I m4

bin_PROGRAMS =
noinst_PROGRAMS =
noinst_LTLIBRARIES =
check_PROGRAMS =
check_LIBRARIES =
AM_CFLAGS =
AM_CXXFLAGS =
AM_CPPFLAGS =
AM_LDFLAGS =
LDADD =

AM_CPPFLAGS += $(TASCEL_CPPFLAGS)
#AM_CPPFLAGS += $(GA_CPPFLAGS)
AM_CPPFLAGS += $(ARMCI_CPPFLAGS)
AM_CPPFLAGS += $(PT_MPI_CPPFLAGS)
AM_CPPFLAGS += $(GMP_CPPFLAGS)
AM_CPPFLAGS += -I$(top_srcdir)/src
AM_CPPFLAGS += -I$(top_srcdir)/contrib/boost_1_55_0
AM_CPPFLAGS += -I$(top_srcdir)/contrib/gtest-1.7.0
AM_CPPFLAGS += -I$(top_srcdir)/contrib/gtest-1.7.0/include
AM_CPPFLAGS += -I$(top_srcdir)/contrib/sais-lite-lcp
AM_CPPFLAGS += -I$(top_srcdir)/contrib/yaml-cpp-0.5.1/include

AM_LDFLAGS += $(TASCEL_LDFLAGS)
#AM_LDFLAGS += $(GA_LDFLAGS)
AM_LDFLAGS += $(ARMCI_LDFLAGS)
AM_LDFLAGS += $(PT_MPI_LDFLAGS)
AM_LDFLAGS += $(GMP_LDFLAGS)

LDADD += libpgraph.la
LDADD += libalign.la
LDADD += $(TASCEL_LIBS)
#LDADD += $(GA_LIBS)
LDADD += $(ARMCI_LIBS)
LDADD += $(PT_MPI_LIBS)
LDADD += $(GMP_LIBS)
#LDADD += $(GA_FLIBS)
LDADD += libyaml-cpp.la

noinst_LTLIBRARIES += libalign.la
libalign_la_SOURCES =
libalign_la_SOURCES += src/align/align.h
libalign_la_SOURCES += src/align/nw_ref.c
libalign_la_SOURCES += src/align/nw_scan.c
libalign_la_SOURCES += src/align/nw_scan_row.c
libalign_la_SOURCES += src/align/nw_stats_ref.c
libalign_la_SOURCES += src/align/nw_stats_scan.c
libalign_la_SOURCES += src/align/sg_ref.c
libalign_la_SOURCES += src/align/sg_scan.c
libalign_la_SOURCES += src/align/sg_stats_ref.c
libalign_la_SOURCES += src/align/sg_stats_scan.c
libalign_la_SOURCES += src/align/sw_ref.c
libalign_la_SOURCES += src/align/sw_scan.c
libalign_la_SOURCES += src/align/sw_stats_ref.c
libalign_la_SOURCES += src/align/sw_stats_scan.c
if HAVE_SSE2
libalign_la_SOURCES += src/align/align_scan_128_16.h
libalign_la_SOURCES += src/align/align_striped_128_16.h
libalign_la_SOURCES += src/align/align_wozniak_128_16.h
libalign_la_SOURCES += src/align/nw_scan_128_16.c
libalign_la_SOURCES += src/align/nw_striped_128_16.c
libalign_la_SOURCES += src/align/nw_wozniak_128_16.c
libalign_la_SOURCES += src/align/nw_stats_scan_128_16.c
libalign_la_SOURCES += src/align/nw_stats_striped_128_16.c
libalign_la_SOURCES += src/align/nw_stats_wozniak_128_16.c
libalign_la_SOURCES += src/align/sg_scan_128_16.c
libalign_la_SOURCES += src/align/sg_striped_128_16.c
libalign_la_SOURCES += src/align/sg_wozniak_128_16.c
libalign_la_SOURCES += src/align/sg_stats_scan_128_16.c
libalign_la_SOURCES += src/align/sg_stats_striped_128_16.c
libalign_la_SOURCES += src/align/sg_stats_wozniak_128_16.c
libalign_la_SOURCES += src/align/sw_scan_128_16.c
libalign_la_SOURCES += src/align/sw_striped_128_16.c
libalign_la_SOURCES += src/align/sw_wozniak_128_16.c
libalign_la_SOURCES += src/align/sw_stats_scan_128_16.c
libalign_la_SOURCES += src/align/sw_stats_striped_128_16.c
libalign_la_SOURCES += src/align/sw_stats_wozniak_128_16.c
endif
if HAVE_SSE4
libalign_la_SOURCES += src/align/align_scan_128_8.h
libalign_la_SOURCES += src/align/align_striped_128_8.h
libalign_la_SOURCES += src/align/align_wozniak_128_8.h
libalign_la_SOURCES += src/align/nw_scan_128_8.c
libalign_la_SOURCES += src/align/nw_striped_128_8.c
libalign_la_SOURCES += src/align/nw_wozniak_128_8.c
libalign_la_SOURCES += src/align/nw_stats_scan_128_8.c
libalign_la_SOURCES += src/align/nw_stats_striped_128_8.c
libalign_la_SOURCES += src/align/nw_stats_wozniak_128_8.c
libalign_la_SOURCES += src/align/sg_scan_128_8.c
libalign_la_SOURCES += src/align/sg_striped_128_8.c
libalign_la_SOURCES += src/align/sg_wozniak_128_8.c
libalign_la_SOURCES += src/align/sg_stats_scan_128_8.c
libalign_la_SOURCES += src/align/sg_stats_wozniak_128_8.c
libalign_la_SOURCES += src/align/sw_scan_128_8.c
libalign_la_SOURCES += src/align/sw_stats_scan_128_8.c
endif

noinst_LTLIBRARIES += libalign_debug.la
libalign_debug_la_SOURCES =
libalign_debug_la_SOURCES += $(libalign_la_SOURCES)
libalign_debug_la_SOURCES += src/align/align_debug.h
if HAVE_SSE2
libalign_debug_la_SOURCES += src/align/align_scan_128_16_debug.h
libalign_debug_la_SOURCES += src/align/align_striped_128_16_debug.h
libalign_debug_la_SOURCES += src/align/align_wozniak_128_16_debug.h
endif
if HAVE_SSE4
libalign_debug_la_SOURCES += src/align/align_scan_128_8_debug.h
libalign_debug_la_SOURCES += src/align/align_striped_128_8_debug.h
libalign_debug_la_SOURCES += src/align/align_wozniak_128_8_debug.h
endif
libalign_debug_la_CPPFLAGS =
libalign_debug_la_CPPFLAGS += $(AM_CPPFLAGS)
libalign_debug_la_CPPFLAGS += -DALIGN_EXTRA

noinst_LTLIBRARIES += libpgraph.la
libpgraph_la_SOURCES =
libpgraph_la_SOURCES += src/alignment.cpp
libpgraph_la_SOURCES += src/alignment.hpp
libpgraph_la_SOURCES += src/AlignStats.hpp
libpgraph_la_SOURCES += src/blosum/blosum40.h
libpgraph_la_SOURCES += src/blosum/blosum45.h
libpgraph_la_SOURCES += src/blosum/blosum50.h
libpgraph_la_SOURCES += src/blosum/blosum62.h
libpgraph_la_SOURCES += src/blosum/blosum75.h
libpgraph_la_SOURCES += src/blosum/blosum80.h
libpgraph_la_SOURCES += src/Bootstrap.cpp
libpgraph_la_SOURCES += src/Bootstrap.hpp
libpgraph_la_SOURCES += src/combinations.c
libpgraph_la_SOURCES += src/combinations.h
libpgraph_la_SOURCES += src/DupStats.hpp
libpgraph_la_SOURCES += src/EdgeResult.hpp
libpgraph_la_SOURCES += src/mpix.cpp
libpgraph_la_SOURCES += src/mpix.hpp
libpgraph_la_SOURCES += src/mpix-types.hpp
libpgraph_la_SOURCES += src/PairCheck.hpp
libpgraph_la_SOURCES += src/PairCheckGlobal.cpp
libpgraph_la_SOURCES += src/PairCheckGlobal.hpp
libpgraph_la_SOURCES += src/PairCheckGlobalServer.cpp
libpgraph_la_SOURCES += src/PairCheckGlobalServer.hpp
libpgraph_la_SOURCES += src/PairCheckLocal.hpp
libpgraph_la_SOURCES += src/PairCheckSemiLocal.hpp
libpgraph_la_SOURCES += src/PairCheckSmp.hpp
libpgraph_la_SOURCES += src/Parameters.cpp
libpgraph_la_SOURCES += src/Parameters.hpp
libpgraph_la_SOURCES += src/pthread_fixes.h
libpgraph_la_SOURCES += src/Sequence.cpp
libpgraph_la_SOURCES += src/Sequence.hpp
libpgraph_la_SOURCES += src/SequenceDatabase.hpp
libpgraph_la_SOURCES += src/SequenceDatabaseReplicated.cpp
libpgraph_la_SOURCES += src/SequenceDatabaseReplicated.hpp
libpgraph_la_SOURCES += src/SequenceDatabaseTascel.cpp
libpgraph_la_SOURCES += src/SequenceDatabaseTascel.hpp
libpgraph_la_SOURCES += src/SigSegvHandler.hpp
libpgraph_la_SOURCES += src/Stats.hpp
libpgraph_la_SOURCES += src/Suffix.hpp
libpgraph_la_SOURCES += src/SuffixBuckets.cpp
libpgraph_la_SOURCES += src/SuffixBuckets.hpp
libpgraph_la_SOURCES += src/SuffixBucketsTascel.cpp
libpgraph_la_SOURCES += src/SuffixBucketsTascel.hpp
libpgraph_la_SOURCES += src/SuffixArray.cpp
libpgraph_la_SOURCES += src/SuffixArray.hpp
libpgraph_la_SOURCES += src/SuffixTree.cpp
libpgraph_la_SOURCES += src/SuffixTree.hpp
libpgraph_la_SOURCES += src/tascelx.hpp
libpgraph_la_SOURCES += src/timer.h
libpgraph_la_SOURCES += src/TreeStats.hpp
if HAVE_ARMCI
libpgraph_la_SOURCES += src/SuffixBucketsArmci.cpp
libpgraph_la_SOURCES += src/SuffixBucketsArmci.hpp
libpgraph_la_SOURCES += src/SequenceDatabaseArmci.cpp
libpgraph_la_SOURCES += src/SequenceDatabaseArmci.hpp
endif

libpgraph_la_SOURCES += contrib/sais-lite-lcp/sais.c
libpgraph_la_SOURCES += contrib/sais-lite-lcp/sais.h

noinst_LTLIBRARIES += libyaml-cpp.la
libyaml_cpp_la_SOURCES =
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/include/yaml-cpp/anchor.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/include/yaml-cpp/binary.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/include/yaml-cpp/contrib/anchordict.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/include/yaml-cpp/contrib/graphbuilder.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/include/yaml-cpp/dll.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/include/yaml-cpp/emitfromevents.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/include/yaml-cpp/emitterdef.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/include/yaml-cpp/emitter.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/include/yaml-cpp/emittermanip.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/include/yaml-cpp/eventhandler.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/include/yaml-cpp/exceptions.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/include/yaml-cpp/mark.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/include/yaml-cpp/node
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/include/yaml-cpp/node/convert.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/include/yaml-cpp/node/detail/bool_type.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/include/yaml-cpp/node/detail/impl.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/include/yaml-cpp/node/detail/iterator_fwd.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/include/yaml-cpp/node/detail/iterator.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/include/yaml-cpp/node/detail/memory.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/include/yaml-cpp/node/detail/node_data.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/include/yaml-cpp/node/detail/node.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/include/yaml-cpp/node/detail/node_iterator.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/include/yaml-cpp/node/detail/node_ref.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/include/yaml-cpp/node/emit.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/include/yaml-cpp/node/impl.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/include/yaml-cpp/node/iterator.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/include/yaml-cpp/node/node.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/include/yaml-cpp/node/parse.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/include/yaml-cpp/node/ptr.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/include/yaml-cpp/node/type.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/include/yaml-cpp/noncopyable.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/include/yaml-cpp/null.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/include/yaml-cpp/ostream_wrapper.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/include/yaml-cpp/parser.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/include/yaml-cpp/stlemitter.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/include/yaml-cpp/traits.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/include/yaml-cpp/yaml.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/binary.cpp
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/collectionstack.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/contrib/graphbuilderadapter.cpp
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/contrib/graphbuilderadapter.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/contrib/graphbuilder.cpp
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/convert.cpp
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/directives.cpp
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/directives.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/emit.cpp
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/emitfromevents.cpp
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/emitter.cpp
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/emitterstate.cpp
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/emitterstate.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/emitterutils.cpp
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/emitterutils.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/exp.cpp
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/exp.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/indentation.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/memory.cpp
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/nodebuilder.cpp
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/nodebuilder.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/node.cpp
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/node_data.cpp
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/nodeevents.cpp
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/nodeevents.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/null.cpp
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/ostream_wrapper.cpp
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/parse.cpp
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/parser.cpp
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/ptr_stack.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/ptr_vector.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/regex.cpp
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/regex.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/regeximpl.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/scanner.cpp
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/scanner.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/scanscalar.cpp
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/scanscalar.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/scantag.cpp
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/scantag.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/scantoken.cpp
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/setting.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/simplekey.cpp
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/singledocparser.cpp
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/singledocparser.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/streamcharsource.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/stream.cpp
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/stream.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/stringsource.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/tag.cpp
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/tag.h
libyaml_cpp_la_SOURCES += contrib/yaml-cpp-0.5.1/src/token.h

bin_PROGRAMS += apps/align
apps_align_SOURCES = apps/align.cpp

noinst_PROGRAMS += tests/st_serial
noinst_PROGRAMS += tests/suftest
noinst_PROGRAMS += tests/suftest_orig
noinst_PROGRAMS += tests/test_sais
noinst_PROGRAMS += tests/test_combinations
noinst_PROGRAMS += tests/test_db_reprinter
noinst_PROGRAMS += tests/test_parser
noinst_PROGRAMS += tests/test_stl_container_performance
noinst_PROGRAMS += tests/test_align
noinst_PROGRAMS += tests/test_align_stats
noinst_PROGRAMS += tests/test_align_debug
noinst_PROGRAMS += tests/test_align_db

tests_suftest_SOURCES                      = tests/suftest.cpp
tests_suftest_orig_SOURCES                 = contrib/sais-lite-lcp/suftest.c
tests_test_sais_SOURCES                    = contrib/sais-lite-lcp/test.c
tests_st_serial_SOURCES                    = tests/st_serial.cpp
tests_test_combinations_SOURCES            = tests/test_combinations.cpp
tests_test_db_reprinter_SOURCES            = tests/test_db_reprinter.cpp
tests_test_parser_SOURCES                  = tests/test_parser.cpp
tests_test_stl_container_performance_SOURCES = tests/test_stl_container_performance.cpp

tests_test_align_SOURCES                   = tests/test_align.c
tests_test_align_LDADD                     = libalign.la libalign_debug.la
tests_test_align_stats_SOURCES             = tests/test_align_stats.c
tests_test_align_stats_LDADD               = libalign.la libalign_debug.la
tests_test_align_debug_SOURCES             = tests/test_align_debug.c
tests_test_align_debug_LDADD               = libalign.la libalign_debug.la
tests_test_align_db_SOURCES                = tests/test_align_db.cpp

check_LIBRARIES += libgtest.a
libgtest_a_SOURCES = contrib/gtest-1.7.0/src/gtest-all.cc

check_LIBRARIES += libpgtest.a
libpgtest_a_SOURCES =
libpgtest_a_SOURCES += tests/MpiEnvironment.cpp
libpgtest_a_SOURCES += tests/MpiEnvironment.hpp
libpgtest_a_SOURCES += tests/StreamPrettyPrinter.cpp
libpgtest_a_SOURCES += tests/StreamPrettyPrinter.hpp

check_PROGRAMS += tests/test_mpi
tests_test_mpi_SOURCES = tests/test_mpi.cpp
tests_test_mpi_LDADD = $(LDADD) libpgtest.a libgtest.a
